--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,34 @@
-# Core dependencies
-requests>=2.25.1
+# المكتبات الأساسية
+aiohttp>=3.8.0
+asyncio>=3.4.3
+requests>=2.26.0
 colorama>=0.4.4
-argparse>=1.4.0
+tqdm>=4.62.3
 
-# theHarvester dependencies
+# مكتبات theHarvester
 dnspython>=2.1.0
-aiohttp>=3.7.4
-aiodns>=3.0.0
-beautifulsoup4>=4.9.3
-lxml>=4.6.3
 netaddr>=0.8.0
+aiohttp-socks>=0.7.1
 
-# SpiderFoot dependencies
-bs4>=0.0.1
+# مكتبات SpiderFoot
 cherrypy>=18.6.1
-mako>=1.1.4
-pyppeteer>=0.2.6
-stem>=1.8.0
+lxml>=4.9.0
+pysocks>=1.7.1
+stemming>=1.0.1
 
-# GHunt dependencies
-selenium>=3.141.0
-pytest>=6.2.5
-requests-futures>=1.0.0
+# مكتبات GHunt
+beautifulsoup4>=4.9.3
+selenium>=4.1.0
+google-api-python-client>=2.0.0
 
-# Sherlock dependencies
+# مكتبات Sherlock
 certifi>=2021.10.8
-python-timeout>=0.1.2
+colorama>=0.4.6
+requests-futures>=1.0.0
 torrequest>=0.1.0
-PySocks>=1.7.1
+
+# مكتبات إضافية للـ API
+fastapi>=0.70.0
+uvicorn>=0.15.0
+pydantic>=1.8.2
+python-dotenv>=0.19.0
